# lucius-tui

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  LUCIUS.md  README.md  docker-compose.yml  install.sh  lucius.inventory.example  redis_listener.py
src/: app.rs  clipboard.rs  config.rs  context.rs  events.rs  handlers.rs  llm.rs  main.rs  mcp.rs  mouse.rs  renderer.rs  ui.rs
