[package]
name = "lucius"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.12.2", features = ["stream", "json"] }
termimad = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
tui-textarea = "0.7.0"
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"




