[package]
name = "lucius"
version = "0.3.0"
edition = "2021"

[lib]
name = "lucius"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.12.2", features = ["stream", "json"] }
termimad = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
tui-textarea = "0.7.0"
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"
dirs = "5.0"
lazy_static = "1.5.0"
regex = "1.12.2"
bollard = "0.16.1"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25.0", features = ["tokio-comp"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
arboard = "3.4.0"

[[bin]]
name = "mcp-test"
path = "src/bin/mcp-test.rs"